corrected spacing
The projects section indent was a bit off so fixed that to be the same
as the other sections. As well as the font sizes being the same

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -439,17 +439,23 @@ header {
       margin-bottom: 15px; }
     .about-section .about img {
       z-index: 0; }
+  @media screen and (max-width: 920px) {
+    .about-section .about .description {
+      padding-right: 50px;
+      font-size: 15px; } }
   @media screen and (max-width: 850px) {
     .about-section .about {
       max-width: 100vw; }
       .about-section .about .description {
-        font-size: 15px;
         max-width: 500px;
         padding-right: 50px; }
       .about-section .about img {
         width: 200px;
         height: auto;
         padding-left: 50px; } }
+  @media screen and (max-width: 825px) {
+    .about-section .about .description {
+      font-size: 14px; } }
   @media screen and (max-width: 660px) {
     .about-section .about .description {
       padding-right: 15px; }
@@ -457,7 +463,6 @@ header {
       padding-left: 0; } }
   @media screen and (max-width: 570px) {
     .about-section .about .description {
-      font-size: 15px;
       max-width: 100%; }
     .about-section .about img {
       width: 175px;
@@ -503,6 +508,12 @@ header {
       .about-section .about img {
         width: 125px;
         height: auto; } }
+  @media screen and (max-width: 375px) {
+    .about-section .about .description {
+      font-size: 13px; } }
+  @media screen and (max-width: 340px) {
+    .about-section .about .description {
+      font-size: 12px; } }
 
 .about-bottom {
   position: relative;
@@ -821,7 +832,6 @@ navbar {
       margin-bottom: 20px; }
     .experience-section .experience .description {
       max-width: 100%;
-      font-size: 14px;
       padding-right: 5px; }
     .experience-section .experience img {
       padding-bottom: 375px; } }
@@ -949,6 +959,10 @@ navbar {
   @media screen and (max-width: 1000px) {
     .projects-section .projects .fun-stuff {
       padding: 10px; } }
+  @media screen and (max-width: 920px) {
+    .projects-section .projects .fun-stuff {
+      padding-right: 50px;
+      font-size: 15px; } }
   @media screen and (max-width: 890px) {
     .projects-section .projects .fun-stuff {
       padding-left: 0px; } }
@@ -958,8 +972,7 @@ navbar {
     .projects-section .projects {
       top: 0;
       max-width: 400px;
-      padding-bottom: 250px;
-      border: 1px solid red; }
+      padding-bottom: 250px; }
       .projects-section .projects .fun-stuff {
         padding-top: 425px;
         font-size: 14px;
@@ -967,15 +980,21 @@ navbar {
         position: absolute;
         max-width: 100%; }
       .projects-section .projects img {
-        padding: 0px;
+        padding: 0;
         max-width: 100%;
         align-self: center; } }
+  @media screen and (max-width: 415px) {
+    .projects-section .projects .fun-stuff {
+      padding-right: 5px; } }
   @media screen and (max-width: 375px) {
     .projects-section .projects .fun-stuff {
       padding-top: 375px;
       font-size: 13px; }
     .projects-section .projects img {
       max-width: 360px; } }
+  @media screen and (max-width: 340px) {
+    .projects-section .projects .fun-stuff {
+      font-size: 12px; } }
 
 .contact-section {
   height: 650px;
